--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "devDependencies": {
     "electron": "^12.0.6",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "yarn": "^1.22.22"
   }
 }
